2009-03-04  Sven Neumann  <sven@gimp.org>

	Bug 574149 – Can't get name/filename of files loaded from URI

	* tools/pdbgen/pdb/image.pdb: added new procedure gimp-image-get-uri.

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

	* plug-ins/pygimp/pygimp-image.c: wrap the new procedure into an
	Image attribute.

2009-03-04  Sven Neumann  <sven@gimp.org>

	* tools/pdbgen/pdb/image.pdb (image_get_filename): improved docs
	for gimp-image-get-filename.

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2009-03-04  Sven Neumann  <sven@gimp.org>

	Bug 574149 – Can't get name/filename of files loaded from URI

	* tools/pdbgen/pdb/image.pdb (image_get_name_invoker): use
	gimp_image_get_display_name().

	* app/pdb/image-cmds.c
	* libgimp/gimpimage_pdb.c: regenerated.

2009-03-03  Sven Neumann  <sven@gimp.org>

	Bug 520078 – Rotate brushes

	* app/core/gimpbrush-transform.c: applied patch from Tal that
	improves bilinear interpolation for the brush transformations and
	fixes a bug in the calculation of the transformation matrix.

2009-03-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpfilteredcontainer.[ch]
	* app/core/gimptag.c
	* app/core/gimptagcache.[ch]: codingstylize. Call iterator GList*
	variables simply "list" just as we call integers simply "i".

2009-03-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_expose): use
	gtk_paint_layout() instead of fiddling with a PangoRenderer
	manually.

2009-03-02  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptagentry.c (gimp_tag_entry_key_press): allow to
	leave the widget with Ctrl+Tab. Handle GDK_KP_Tab and
	GDK_ISO_Left_Tab.
	(gimp_tag_entry_expose): 

2009-03-02  Michael Natterer  <mitch@gimp.org>

	* app/core/gimptagged.[ch]: add gimp_tagged_set_tags() which
	takes a GList of tags.

	* app/widgets/gimptagentry.c (gimp_tag_entry_assign_tags): use it.

	(gimp_tag_entry_item_set_tags): remove.

2009-03-02  Michael Natterer  <mitch@gimp.org>
