@@ -257,7 +257,7 @@ name|np
 decl_stmt|;
 comment|/* Number of image planes (0 for pbm) */
 DECL|member|asciibody
-name|gint
+name|gboolean
 name|asciibody
 decl_stmt|;
 comment|/* 1 if ascii body, 0 if raw body */
@@ -340,6 +340,11 @@ modifier|*
 name|blu
 decl_stmt|;
 comment|/* Colormap blue */
+DECL|member|solid_white
+name|gboolean
+name|solid_white
+decl_stmt|;
+comment|/* image is all white (pbm only) */
 DECL|typedef|PNMRowInfo
 block|}
 name|PNMRowInfo
@@ -353,7 +358,7 @@ end_comment
 begin_typedef
 typedef|typedef
 struct|struct
-DECL|struct|__anon2949a7890108
+DECL|struct|__anon290f197a0108
 block|{
 DECL|member|raw
 name|gint
@@ -3777,8 +3782,6 @@ block|{
 name|gint
 name|b
 decl_stmt|,
-name|i
-decl_stmt|,
 name|p
 init|=
 literal|0
@@ -3826,15 +3829,23 @@ operator|++
 control|)
 comment|/* each output byte */
 block|{
-operator|*
-operator|(
+name|gint
+name|i
+decl_stmt|;
 name|rbcur
-operator|+
+index|[
 name|b
-operator|)
+index|]
 operator|=
 literal|0
 expr_stmt|;
+if|if
+condition|(
+name|ri
+operator|->
+name|solid_white
+condition|)
+continue|continue;
 for|for
 control|(
 name|i
@@ -3861,21 +3872,17 @@ condition|)
 break|break;
 if|if
 condition|(
-operator|*
-operator|(
 name|data
-operator|+
+index|[
 name|p
-operator|)
+index|]
 operator|==
 literal|0
 condition|)
-operator|*
-operator|(
 name|rbcur
-operator|+
+index|[
 name|b
-operator|)
+index|]
 operator||=
 call|(
 name|char
@@ -3977,12 +3984,10 @@ operator|>
 literal|69
 condition|)
 block|{
-operator|*
-operator|(
 name|rbcur
-operator|+
+index|[
 name|i
-operator|)
+index|]
 operator|=
 literal|'\n'
 expr_stmt|;
@@ -3999,33 +4004,31 @@ expr_stmt|;
 block|}
 if|if
 condition|(
-operator|*
-operator|(
+name|ri
+operator|->
+name|solid_white
+operator|||
 name|data
-operator|+
+index|[
 name|i
-operator|)
-operator|==
+index|]
+operator|!=
 literal|0
 condition|)
-operator|*
-operator|(
 name|rbcur
-operator|+
+index|[
 name|i
-operator|)
-operator|=
-literal|'1'
-expr_stmt|;
-else|else
-operator|*
-operator|(
-name|rbcur
-operator|+
-name|i
-operator|)
+index|]
 operator|=
 literal|'0'
+expr_stmt|;
+else|else
+name|rbcur
+index|[
+name|i
+index|]
+operator|=
+literal|'1'
 expr_stmt|;
 name|line_len
 operator|++
@@ -4364,10 +4367,6 @@ control|)
 block|{
 name|sprintf
 argument_list|(
-operator|(
-name|char
-operator|*
-operator|)
 name|rbcur
 argument_list|,
 literal|"%d\n"
@@ -4394,10 +4393,6 @@ argument_list|)
 expr_stmt|;
 name|sprintf
 argument_list|(
-operator|(
-name|char
-operator|*
-operator|)
 name|rbcur
 argument_list|,
 literal|"%d\n"
@@ -4424,10 +4419,6 @@ argument_list|)
 expr_stmt|;
 name|sprintf
 argument_list|(
-operator|(
-name|char
-operator|*
-operator|)
 name|rbcur
 argument_list|,
 literal|"%d\n"
@@ -5029,14 +5020,17 @@ return|;
 block|}
 block|}
 block|}
+name|rowinfo
+operator|.
+name|solid_white
+operator|=
+name|FALSE
+expr_stmt|;
 if|if
 condition|(
 name|drawable_type
 operator|==
 name|GIMP_INDEXED_IMAGE
-operator|&&
-operator|!
-name|pbm
 condition|)
 block|{
 name|guchar
@@ -5045,9 +5039,6 @@ name|cmap
 decl_stmt|;
 name|gint
 name|colors
-decl_stmt|;
-name|gint
-name|i
 decl_stmt|;
 name|cmap
 operator|=
@@ -5059,6 +5050,37 @@ operator|&
 name|colors
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|pbm
+condition|)
+block|{
+comment|/*  If we are dealing with an all-white image, then the colormap            *  has one entry only and we can't assume that the first entry            *  is black and the second is white.            */
+if|if
+condition|(
+name|colors
+operator|==
+literal|1
+operator|&&
+name|cmap
+index|[
+literal|0
+index|]
+condition|)
+block|{
+name|rowinfo
+operator|.
+name|solid_white
+operator|=
+name|TRUE
+expr_stmt|;
+block|}
+block|}
+else|else
+block|{
+name|gint
+name|i
+decl_stmt|;
 for|for
 control|(
 name|i
@@ -5118,6 +5140,12 @@ operator|.
 name|blu
 operator|=
 name|blu
+expr_stmt|;
+block|}
+name|g_free
+argument_list|(
+name|cmap
+argument_list|)
 expr_stmt|;
 block|}
 comment|/* allocate a buffer for retrieving information from the pixel region  */
